<resources>
    <string name="app_name">Covid19Tracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_subscriptions">No Subscriptions yet, you can go to Countries and click on subscribe Button.</string>
    <string name="no_internet">No Internet Connection.</string>
    <string name="retry">Retry again</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="countries">Countries</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="confirmed">Confirmed</string>
    <string name="recoverd">Recoverd</string>
    <string name="deaths">Deaths</string>
    <string name="world_wide">World wide</string>
    <string name="today_cases">Today Cases</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="critical">Critical</string>
    <string name="statistics">Statistics</string>
</resources>
