<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/allCountriesFragment"
        android:orderInCategory="100"
        android:icon="@drawable/ic_healthcare_and_medical"
        android:title="@string/countries"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mapFragment"
        android:orderInCategory="100"
        android:icon="@drawable/ic_business"
        android:title="@string/statistics"
        app:showAsAction="always"/>
    <item
        android:id="@+id/subscriptionsFragment"
        android:orderInCategory="100"
        android:icon="@drawable/ic_miscellaneous"
        android:title="@string/subscriptions"
        app:showAsAction="ifRoom"/>

</menu>