<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.statisticsView.StatisticsFragment">
    <LinearLayout
        android:id="@+id/lottie_covid_sta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/chart_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                android:layout_margin="@dimen/all_margin"
                app:layout_constraintBottom_toTopOf="@id/chart_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed"
                        android:textColor="#10519A" />

                    <TextView
                        android:id="@+id/confirmed_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#10519A"
                        android:textSize="@dimen/numbers_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                android:layout_margin="@dimen/all_margin"
                app:layout_constraintBottom_toTopOf="@id/chart_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recoverd"
                        android:textColor="#449F48" />

                    <TextView
                        android:id="@+id/recovered_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#449F48"
                        android:textSize="@dimen/numbers_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                android:layout_margin="@dimen/all_margin"
                app:layout_constraintBottom_toTopOf="@id/chart_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:textColor="#D30F1F" />

                    <TextView
                        android:id="@+id/death_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#D30F1F"
                        android:textSize="@dimen/numbers_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                android:layout_margin="@dimen/all_margin"
                app:layout_constraintBottom_toTopOf="@id/chart_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_cases"
                        android:textColor="#2196F3" />

                    <TextView
                        android:id="@+id/today_cases_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#2196F3"
                        android:textSize="@dimen/numbers_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                android:layout_margin="@dimen/all_margin"
                app:layout_constraintBottom_toTopOf="@id/chart_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today_deaths"
                        android:textColor="#D30A1F" />

                    <TextView
                        android:id="@+id/today_deaths_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#D30A1F"
                        android:textSize="@dimen/numbers_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp"
                android:layout_margin="@dimen/all_margin"
                app:layout_constraintBottom_toTopOf="@id/chart_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/critical"
                        android:textColor="#C36806" />

                    <TextView
                        android:id="@+id/critical_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#C36806"
                        android:textSize="@dimen/numbers_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
 <FrameLayout
     android:id="@+id/chart_layout"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/lottie_covid_sta">

     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/all_margin"
         android:visibility="visible"
    />
     <include
         android:id="@+id/noData_Layout"
         layout="@layout/no_data_layout"
         />
 </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>